--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.14.1",
     "element-ui": "^2.6.3",
+    "gsap": "^2.1.2",
     "lottie-web": "^5.7.11",
     "swiper": "^6.6.2",
     "vue": "^2.6.6",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-i18n": "^8.26.7",
     "vue-router": "^3.3.1",
     "vuex": "^3.0.1"
   },
